fix(ui): better on hover button contrast for some situations

--- a/src/renderer/style/app-settings.css
+++ b/src/renderer/style/app-settings.css
@@ -146,7 +146,7 @@
             }
             tr:hover td.remove {
                 button svg {
-                    stroke: var(--secondary-contrast);
+                    stroke: var(--hover-contrast);
                 }
             }
         }
