--- a/src/renderer/style/script-form.css
+++ b/src/renderer/style/script-form.css
@@ -29,6 +29,9 @@ form.script {
             &:hover {
                 background-color: var(--hover);
                 color: var(--hover-contrast);
+                button svg {
+                    stroke: var(--hover-contrast);
+                }
             }
 
             span {
